syntax = "proto3";

package user.v1;

option go_package = "github.com/andikanugraha11/go-by-example/learn-grpc/gen/user/v1;userpb";

import "user/v1/user.proto";

service UserService{
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
}

message GetUserRequest{
    string uuid = 1;
}

message GetUserResponse{
    User user = 1;
}